--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,4 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+@charset "utf-8";
 html,
 body {
   max-width: 100vw;
@@ -17,11 +6,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Noto Sans KR Regular;
 }
 
 * {
@@ -29,14 +14,17 @@ body {
   padding: 0;
   margin: 0;
 }
+ul{
+  list-style: none;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+nextjs-portal{
+  display: none;
+}
+.hidden{
+  display: none;
 }
