--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+
+
 html,
 body {
   max-width: 100vw;
@@ -6,9 +10,11 @@ body {
 }
 
 body {
-  font-family: Noto Sans KR Regular;
+  font-family: "Noto Sans KR", sans-serif;
 }
-
+body::-webkit-scrollbar {
+  display: none;
+}
 * {
   box-sizing: border-box;
   padding: 0;
