--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -1,11 +1,13 @@
 .footerContainer{
     width: 100%;
+    height: 120px;
     border-top: 1px solid #222;
     display: flex;
-    padding: 40px 60px;
+    padding: 0 60px;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     bottom: 0;
     opacity: 0;
+    z-index: 3;
 }
