--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 .headerContainer{
     width: 100%;
@@ -11,6 +10,7 @@
     position: fixed;
     top:0;
     opacity: 0;
+    z-index: 3;
 }
 .logoBox{
     width: 160px;
