홈 + 반응형 거의 완성

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@ body {
 
 body {
   font-family: "Noto Sans KR", sans-serif;
+  word-break: keep-all;
 }
 body::-webkit-scrollbar {
   display: none;
@@ -25,7 +26,7 @@ ul{
 }
 
 a {
-  color: inherit;
+  color: #222;
   text-decoration: none;
 }
 nextjs-portal{
