--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -9,12 +9,11 @@
     align-items: center;
     position: relative;
 }
-.textBox{
+.introTextBox{
     color: #fff;
     font-size: 100px;
     font-family: "Aldrich", sans-serif;
 }
-
 .scrollGuide{
   position: absolute;
   left: 50%;
@@ -74,24 +73,33 @@
     display: flex;
 }
 .content{
+    flex: 1;
     width: 100%;
     font-size: 18px;
     color: #222;
-    padding: 30px 70px;
-    flex: 1;
+    padding: 11px 10px 8px 10px;
     line-height: 1.25;
     position: relative;
-    display: flex;
-    gap: 300px;
     overflow: visible;
+    display: flex;
+}
+.mainContent{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    padding: 30px 70px;
+    width: 65%;
+    justify-content: space-between;
 }
 .borderBox{
     position: absolute;
     top: 0;
     left: 0;
 }
-
-.content p {
+.overviewTextBox{
+    flex: 1;
+}
+.overviewTextBox p {
     margin-left: 10px;
 }
 .sectionTitle{
@@ -104,7 +112,6 @@
     font-weight: 500;
 }
 .btnBox{
-    position: absolute;
     display: flex;
     gap: 90px;
     bottom: 50px;
@@ -135,7 +142,7 @@
     display: inline-block;
     width: 25px;
     height: 25px;
-    background: url("/img/right-arrow.png") no-repeat center;
+    background: url("/source/img/right-arrow.png") no-repeat center;
     background-size: 25px 25px;
     position: absolute;
     right: 25px;
@@ -161,7 +168,83 @@
     } 
 }
 .overviewVisual{
-    width: 30%;
+    width: 35%;
     height: 100%;
     position: relative;
+    transition: none;
+}
+.overviewVisual video{
+    width: 100%;
+    object-fit: fill;
+    height: 100%;
+    filter: grayscale(100%);
+}
+.overviewVisual::before{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+@media screen and (min-width: 731px) and (max-width: 1350px) {
+    .introTextBox{
+        font-size: 80px;
+    }
+    .mainContent{
+        width: 100%;
+    }
+    .mainContent p{
+        font-size: 16px;
+    }
+    .mainContent .sectionTitle{
+        font-size: 80px;
+    }
+    .mainContent .overviewIntro{
+        font-size: 20px;
+    }
+    .overviewVisual{
+        display: none;
+    }
+}
+@media screen and (max-width: 730px) {
+    .contentBox{
+        padding: 0;
+        overflow: visible;
+    }
+    .content{
+        padding: 0;
+    }
+    .introTextBox{
+        font-size: 40px;
+    }
+    .borderBox{
+        display: none;
+    }
+    .mainContent{
+        width: 100%;
+        padding: 50px 20px 90px 20px;
+    }
+    .mainContent p{
+        font-size: 16px;
+        margin-left: 0;
+    }
+    .mainContent .sectionTitle{
+        font-size: 50px;
+        border-bottom: 2px solid #222;
+        line-height: 1.5;
+    }
+    .mainContent .overviewIntro{
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    .btnBox{
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 60px;
+    }
+    .overviewVisual{
+        display: none;
+    }
 }
