--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -1,5 +1,3 @@
-
-
 .headerContainer{
     width: 100%;
     height: 80px;
@@ -10,7 +8,7 @@
     position: fixed;
     top:0;
     opacity: 0;
-    z-index: 3;
+    z-index: 1;
 }
 .logoBox{
     width: 160px;
@@ -58,4 +56,90 @@
 }
 .navItem:hover::before{
     width: 100%;
+}
+
+/*아래부터는 모바일 관련*/
+.m_menuBtnBox{
+    display: none;
+    width: 30px;
+    height: 30px;
+}
+.m_menuBtnBox .m_menuBtn{
+    width: 30px;
+    height: 30px;
+    display: block;
+    background: url("/source/img/m_menu.png");
+    background-size: 30px 30px;
+}
+.m_navBox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #fff;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
+    gap: 50px;
+}
+.m_menuCloseBtn{
+    width: 30px;
+    height: 30px;
+    display: block;
+    background: url("/source/img/m_close.png");
+    background-size: 30px 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    z-index: 2;
+}
+.m_navBoxUpper{
+    width: 100%;
+    display: block;
+    position: relative;
+}
+.m_logoBox{
+    display: block;
+}
+.m_navList{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.m_navItem{
+    font-size: 60px;
+    font-weight: 600;
+}
+.m_navBoxLower{
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    left: 0;
+}
+
+@media screen and (max-width:730px) {
+    .headerContainer{
+        position: fixed;
+        height: 50px;
+        padding: 10px 30px;
+    }
+    .headerContainer .logoBox{
+        display: none;
+    }
+    .headerContainer .navItem{
+        display: none;
+    }
+    .m_menuBtnBox{
+        display: block;
+    }
+}
+@media screen and (min-width:731px) {
+    .m_navBox{
+        display: none;
+    }
 }
