--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,29 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap');
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-
+@font-face {
+  font-family:'Aldrich';
+  src: url('/source/fonts/Aldrich-Regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family:'Noto Sans KR';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/source/fonts/NotoSansKR-VariableFont_wght') format('ttf');
+}
+@font-face {
+  font-family:'Pretendard';
+  font-weight: 400;
+  font-style: normal;
+  src: url('/source/fonts/Pretendard-Regular.woff') format('woff');
+}
+@font-face {
+  font-family:'Exo 2';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/source/fonts/Exo2-VariableFont_wght') format('ttf');
+}
 html,
 body {
   max-width: 100vw;
@@ -10,7 +31,6 @@ body {
 }
 
 body {
-  font-family: "Noto Sans KR", sans-serif;
   word-break: keep-all;
 }
 body::-webkit-scrollbar {
