--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -12,7 +12,7 @@
     color: #fff;
     font-size: 100px;
     font-family: "Aldrich", sans-serif;
-    
+    pointer-events: none;
 }
 .visualTextChar{
     display: inline-block;
@@ -102,6 +102,7 @@
 }
 .overviewTextBox{
     flex: 1;
+    pointer-events: none;
 }
 .overviewTextBox p {
     margin-left: 10px;
