--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -12,6 +12,7 @@
 }
 .sectionTitle{
     --after-width: 0%; 
+    pointer-events: none;
 }
 .title{
     font-size: 100px;
@@ -66,7 +67,7 @@
 .projectCard{
     background-position: center;
     background-size: 1000px 600px;
-    width: 450px;
+    width: 30%;
     height: 450px;
     cursor: pointer;
     overflow: hidden;
@@ -82,7 +83,7 @@
     background-color: #222;
     border: #fff 1px solid;
     border-radius: 10px;
-    transform: translateY(200%);
+    transform: translateY(200%) translateX(-50%);
     color: #fff;
     text-align: center;
     line-height: 60px;
@@ -90,10 +91,10 @@
     transition: 0.3s;
     position: absolute;
     bottom: 40px;
-    left: 48px;
+    left: 50%;
 }
 .projectCard:hover .hoverBox{
-    transform: translateY(0);
+    transform: translateY(0) translateX(-50%);
     opacity: 1;
 }
 
@@ -102,12 +103,13 @@
         font-size: 80px;
     }
     .projectCard{
-        width: 400px;
+        box-sizing: border-box;
+        width: 40%;
         height: 400px;
     }
     .hoverBox{
         bottom: 30px;
-        left: 40px;
+        left: 50%;
     }
 }
 
@@ -117,7 +119,7 @@
     }
     .projectCard{
         width: 100%;
-        height: 400px;
+        height: 300px;
     }
     .hoverBox{
         width: 60%;
