--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -9,6 +9,7 @@
     position: fixed;
     bottom: 0;
     opacity: 0;
+    color: #222;
 }
 @media screen and (max-width:730) {
     .footerContainer{
