--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -150,7 +150,7 @@
     display: inline-block;
     width: 25px;
     height: 25px;
-    background: url("/source/img/right-arrow.png") no-repeat center;
+    background: url("/source/img/icons/right-arrow.png") no-repeat center;
     background-size: 25px 25px;
     position: absolute;
     right: 25px;
