--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -1,11 +1,13 @@
 .wrapper{
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 .container{
     width: 100%;
     padding: 0 150px;
 }
+
+/*상단*/
 .upperArea{
     height: 100px;
     display: flex;
@@ -17,7 +19,6 @@
     display: block;
     position: relative;
     transition: .5s;
-    
 }
 .back::after{
     content: '';
@@ -28,18 +29,18 @@
     right: 0;
     bottom: 0;
     width: 0;
-    background: url('/source/img/left-arrow.png') no-repeat center;
+    background: url('/source/img/icons/left-arrow.png') no-repeat center;
     background-size: 50px 50px;
     width: 50px;
     height: 50px;
     filter: brightness(0);
     transition: .3s;
+    cursor: pointer;
 }
 .back:hover{
     width: 50px;
 }
 .back:hover::after{
-    filter: brightness(10);
     animation: shaking 0.5s ease-in-out infinite alternate;
 }
 @keyframes shaking{
@@ -52,4 +53,65 @@
     100% {
         transform: translateX(0);
     } 
+}
+
+
+/*주 내용*/
+.contentBox{
+    width: 60%;
+    padding: 15px 0 50px;
+}
+.projectTitle{
+    font-size: 40px;
+    font-family:'Aldrich';
+    font-weight: 600;
+}
+.listBlock{
+    margin-top: 50px;
+}
+.title{
+    font-size: 25px;
+    font-family:'Aldrich';
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.description .title::before{
+    content: '';
+    display: inline-block;
+    background: url("/source/img/icons/list01.png") no-repeat center;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+}
+.usedSkills .title::before{
+    content: '';
+    display: inline-block;
+    background: url("/source/img/icons/list02.png") no-repeat center;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+}
+.linkList .title::before{
+    content: '';
+    display: inline-block;
+    background: url("/source/img/icons/list03.png") no-repeat center;
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+}
+.subtitle{
+    font-size: 20px;
+    font-family:'Aldrich';
+    font-weight: 500;
+}
+.description p{
+    margin-left: 50px;
+}
+.listBlock ul{
+    margin-left: 50px;
+}
+.usedSkills ul{
+    margin-top: 30px;
 }
