--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -58,7 +58,7 @@
 
 /*주 내용*/
 .contentBox{
-    width: 60%;
+    width: 70%;
     padding: 15px 0 50px;
 }
 .projectTitle{
@@ -67,7 +67,7 @@
     font-weight: 600;
 }
 .listBlock{
-    margin-top: 50px;
+    margin-top: 100px;
 }
 .title{
     font-size: 25px;
@@ -93,7 +93,7 @@
     height: 30px;
     background-size: 30px 30px;
 }
-.linkList .title::before{
+.references .title::before{
     content: '';
     display: inline-block;
     background: url("/source/img/icons/list03.png") no-repeat center;
@@ -105,13 +105,130 @@
     font-size: 20px;
     font-family:'Aldrich';
     font-weight: 500;
+    display: inline-block;
 }
 .description p{
+    margin-top: 30px;
     margin-left: 50px;
 }
 .listBlock ul{
     margin-left: 50px;
 }
-.usedSkills ul{
+.skill{
     margin-top: 30px;
+    margin-left: 50px;
+}
+.skill ul{
+    margin-left: 0;
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    text-align: center;
+    flex-wrap: wrap;
+}
+.skill .subtitle{
+    margin-top: 50px;
+    display: block;
+}
+.skill .subtitle:first-child{
+    margin-top: 0;
+}
+.skill li{
+    font-weight: 600;
+    margin-top: 20px;
+    flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+.skillIcon{
+    width: 50px;
+    height: 50px;
+}
+.references ul{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.references ul li{
+    display: flex;
+    word-break: break-all;
+}
+.references ul li span{
+    flex-basis: 100px;
+}
+
+@media screen and (min-width:731px) and (max-width:1350px) {
+    .container{
+        padding: 0 80px;
+    }
+}
+
+@media screen and (max-width:730px) {
+    .wrapper{
+        background: white !important;
+    }
+    .container{
+        padding: 0 2%;
+    }
+    .contentBox{
+        width: 100%;
+        padding: 15px 0 50px;
+    }
+    .description .title::before{
+        content: '';
+        display: inline-block;
+        background: url("/source/img/icons/list01.png") no-repeat center;
+        width: 20px;
+        height: 20px;
+        background-size: 20px 20px;
+    }
+    .usedSkills .title::before{
+        content: '';
+        display: inline-block;
+        background: url("/source/img/icons/list02.png") no-repeat center;
+        width: 20px;
+        height: 20px;
+        background-size: 20px 20px;
+    }
+    .references .title::before{
+        content: '';
+        display: inline-block;
+        background: url("/source/img/icons/list03.png") no-repeat center;
+        width: 20px;
+        height: 20px;
+        background-size: 20px 20px;
+    }
+    .listBlock{
+        margin-top: 70px;
+    }
+    .title{
+        gap: 10px;
+    }
+    .description p{
+    margin-top: 20px;
+    margin-left: 30px;
+    }
+    .listBlock ul{
+        margin-left: 30px;
+    }
+    .skill{
+        margin-top: 20px;
+        margin-left: 30px;
+    }
+    .skill ul{
+        margin-left: 0;
+        margin-top: 20px;
+        display: flex;
+        gap: 20px;
+        text-align: center;
+        flex-wrap: wrap;
+    }
+    .skill .subtitle{
+        margin-top: 30px;
+        display: block;
+    }
+
 }
