--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -65,6 +65,7 @@
     font-size: 40px;
     font-family:'Aldrich';
     font-weight: 600;
+    opacity: 0;
 }
 .listBlock{
     margin-top: 100px;
@@ -76,6 +77,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    opacity: 0;
 }
 .description .title::before{
     content: '';
@@ -158,6 +160,30 @@
 }
 .references ul li span{
     flex-basis: 100px;
+}
+.notFound{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    flex-direction: column;
+    gap: 30px;
+}
+.notFound a{
+    font-size: 16px;
+    border: 1px solid #222;
+    background-color: #fff;
+    border-radius: 10px;
+    color: #222;
+    padding: 20px 30px;
+    transition: .3s;
+    cursor: pointer;
+}
+.notFound a:hover{
+    background-color: #222;
+    color: #fff;
 }
 
 @media screen and (min-width:731px) and (max-width:1350px) {
