--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     width: 100%;
     height: auto;
+    color: #222;
 }
 .container{
     width: 100%;
@@ -160,6 +161,12 @@
 .references ul li span{
     flex-basis: 100px;
 }
+.link a{
+   color: #555555;
+}
+.language, .framework, .db, .deploy, .github, .notion, .link a{
+    opacity: 0;
+}
 .notFound{
     width: 100%;
     height: 100vh;
@@ -183,9 +190,6 @@
 .notFound a:hover{
     background-color: #222;
     color: #fff;
-}
-.language, .framework, .db, .deploy, .github, .notion, .link a{
-    opacity: 0;
 }
 
 @media screen and (min-width:731px) and (max-width:1350px) {
