--- a/src/components/pages/about/about.module.css
+++ b/src/components/pages/about/about.module.css
@@ -6,7 +6,7 @@
     padding: 80px 80px 120px;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 }
@@ -36,8 +36,19 @@
     background: #222;
     width: var(--after-width); 
 }
-
-
+.content{
+    overflow: auto;
+}
+.content::-webkit-scrollbar {
+  width: 6px; 
+}
+.content::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
+}
+.content::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 @media screen and (min-width: 730px) and (max-width: 1350px){
     .title{
         font-size: 80px;
