--- a/src/components/pages/about/about.module.css
+++ b/src/components/pages/about/about.module.css
@@ -3,7 +3,7 @@
     height: 100vh;
 }
 .contentBox{
-    padding: 80px 80px 120px;
+    padding: 80px 80px 0;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -26,6 +26,7 @@
     opacity: 0;
 }
 .sectionTitleTextChar{
+    opacity: 0;
     display: inline-block;
 }
 .sectionTitle::after{
@@ -49,6 +50,78 @@
 .content::-webkit-scrollbar-track {
   background-color: transparent;
 }
+.subtitle{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.titleText{
+    font-size: 25px;
+    font-family:'Aldrich';
+    font-weight: 500;
+    opacity: 1;
+}
+.numIcon{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+}
+.subtitle .num01{
+    background: url("/source/img/icons/list01.png") no-repeat center;
+    background-size: 30px 30px;
+}
+.subtitle .num02{
+    background: url("/source/img/icons/list02.png") no-repeat center;
+    background-size: 30px 30px;
+}
+.subtitle .num03{
+    background: url("/source/img/icons/list03.png") no-repeat center;
+    background-size: 30px 30px;
+}
+.subtitle .num04{
+    background: url("/source/img/icons/list04.png") no-repeat center;
+    background-size: 30px 30px;
+}
+.kimsangho{
+    margin-top: 20px;
+}
+.kimsangho p{
+    margin-left: 50px;
+}
+.kimsangho p:first-of-type{
+    margin-top: 20px;
+}
+.education, .certificate, .skills{
+    margin-top: 30px;
+}
+.education ul, .certificate ul, .skills ul{
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.skills .skillListTitle{
+    margin-left: 50px;
+    margin-top: 40px;
+    font-size: 20px;
+    font-family:'Aldrich';
+    font-weight: 500;
+}
+.skills ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.skills ul li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+.skillIcon{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+}
 @media screen and (min-width: 730px) and (max-width: 1350px){
     .title{
         font-size: 80px;
@@ -56,6 +129,9 @@
 }
 
 @media screen and (max-width: 730px){
+    .contentBox{
+        padding: 50px 20px 70px 20px;
+    }
     .title{
         font-size: 50px;
     }
