--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -26,6 +26,7 @@
     opacity: 0;
 }
 .sectionTitleTextChar{
+    opacity: 0;
     display: inline-block;
 }
 .sectionTitle::after{
@@ -114,6 +115,9 @@
 }
 
 @media screen and (max-width: 730px){
+    .contentBox{
+        padding: 50px 20px 0 20px;
+    }
     .title{
         font-size: 50px;
     }
