--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -71,6 +71,7 @@
     display: block;
     background: url("/source/img/icons/m_menu.png");
     background-size: 30px 30px;
+    cursor: pointer;
 }
 .m_navBox{
     position: absolute;
@@ -105,6 +106,7 @@
     right: 20px;
     top: 20px;
     z-index: 2;
+    cursor: pointer;
 }
 .m_navBoxUpper{
     width: 100%;
