--- a/src/components/pages/about/about.module.css
+++ b/src/components/pages/about/about.module.css
@@ -59,72 +59,139 @@
     font-size: 25px;
     font-family:'Aldrich';
     font-weight: 500;
-    opacity: 1;
+    opacity: 0;
 }
 .numIcon{
     display: inline-block;
     width: 30px;
     height: 30px;
-    opacity: 1;
+    opacity: 0;
+}
+.listBlock{
+    margin-top: 80px;
+}
+.listBlock:first-child{
+    margin-top: 20px;
 }
 .subtitle .num01{
-    background: url("/source/img/icons/list01.png") no-repeat center;
-    background-size: 30px 30px;
+    background: url("/source/img/icons/list01.png") no-repeat center/30px 30px;
 }
 .subtitle .num02{
-    background: url("/source/img/icons/list02.png") no-repeat center;
-    background-size: 30px 30px;
+    background: url("/source/img/icons/list02.png") no-repeat center/30px 30px;
 }
 .subtitle .num03{
-    background: url("/source/img/icons/list03.png") no-repeat center;
-    background-size: 30px 30px;
+    background: url("/source/img/icons/list03.png") no-repeat center/30px 30px;
 }
 .subtitle .num04{
-    background: url("/source/img/icons/list04.png") no-repeat center;
-    background-size: 30px 30px;
+    background: url("/source/img/icons/list04.png") no-repeat center/30px 30px;
 }
-.kimsangho{
-    margin-top: 20px;
+.subtitle .num05{
+    background: url("/source/img/icons/list05.png") no-repeat center/30px 30px;
 }
 .kimsangho p{
     margin-left: 50px;
+    opacity: 0;
 }
 .kimsangho p:first-of-type{
     margin-top: 20px;
-}
-.education, .certificate, .skills{
-    margin-top: 30px;
 }
 .education ul, .certificate ul, .skills ul{
     margin-left: 50px;
     margin-top: 20px;
 }
+.education li, .certificate li, .skills li{
+    opacity: 0;
+}
 .skills .skillListTitle{
     margin-left: 50px;
-    margin-top: 40px;
+    margin-top: 50px;
     font-size: 20px;
     font-family:'Aldrich';
     font-weight: 500;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.skills .skillListTitle::before{
+    content: '';
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    background: #222;
+}
+.skills .skillListTitle:first-of-type{
+    margin-top: 20px;
 }
 .skills ul{
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    gap: 20px;
 }
 .skills ul li{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    flex-basis: 10%;
 }
 .skillIcon{
     display: inline-block;
     width: 50px;
     height: 50px;
 }
+.contact{
+    position: relative;
+    margin-bottom: 100px
+}
+.contact .contactBox{
+    width: 100%;
+    border: 0px #222 solid;
+    height: 300px;
+    border-radius: 20px;
+    margin-top: 30px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+}
+.contactBox p{
+    font-size: 40px;
+    font-weight: 600;
+    color: #555;
+    position: relative;
+    opacity: 0;
+}
+.contactBox p::before{
+    content: '';
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    opacity: 0.2;
+    left: -20px;
+    top: -20px;
+}
+.contactBox .email::before{
+    background: url("/source/img/icons/ico_email.png") no-repeat center/100px 100px;
+}
+.contactBox .git::before{
+    background: url("/source/img/icons/ico_git.png") no-repeat center/100px 100px;
+}
+.contactBox a{
+    font-size: 20px;
+    opacity: 0;
+}
+.contactBox a:hover{
+    text-decoration: underline;
+}
 @media screen and (min-width: 730px) and (max-width: 1350px){
     .title{
         font-size: 80px;
+    }
+    .skills ul{
+        gap: 30px;
     }
 }
 
@@ -134,5 +201,72 @@
     }
     .title{
         font-size: 50px;
+    }
+    .numIcon{
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        opacity: 0;
+    }
+    .subtitle{
+        gap: 10px;
+    }
+    .subtitle .num01{
+        background: url("/source/img/icons/list01.png") no-repeat center/20px 20px;
+    }
+    .subtitle .num02{
+        background: url("/source/img/icons/list02.png") no-repeat center/20px 20px;
+    }
+    .subtitle .num03{
+        background: url("/source/img/icons/list03.png") no-repeat center/20px 20px;
+    }
+    .subtitle .num04{
+        background: url("/source/img/icons/list04.png") no-repeat center/20px 20px;
+    }
+    .subtitle .num05{
+        background: url("/source/img/icons/list05.png") no-repeat center/20px 20px;
+    }
+    .kimsangho p{
+        margin-left: 30px;
+    }
+    .education ul, .certificate ul, .skills ul{
+        margin-left: 30px;
+        margin-top: 20px;
+    }
+    .skills .skillListTitle{
+        margin-left: 30px;
+    }
+    .skills ul{
+        gap: 40px;
+    }
+    .contact .contactBox{
+        flex-direction: column;
+        gap: 50px;
+        height: auto;
+        padding: 50px;
+        align-items: start;
+        justify-content: start;
+    }
+    .contactBox p{
+        font-size: 30px;
+    }
+    .contactBox p::before{
+        content: '';
+        display: inline-block;
+        width: 70px;
+        height: 70px;
+        position: absolute;
+        opacity: 0.2;
+        left: -20px;
+        top: -20px;
+    }
+    .contactBox .email::before{
+        background: url("/source/img/icons/ico_email.png") no-repeat center/70px 70px;
+    }
+    .contactBox .git::before{
+        background: url("/source/img/icons/ico_git.png") no-repeat center/70px 70px;
+    }
+    .contactBox a{
+        font-size: 16px;
     }
 }
