푸터 반응형 수정

--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -14,7 +14,7 @@
 .footerContainer a{
     display: block;
 }
-@media screen and (max-width:730) {
+@media screen and (max-width:730px) {
     .footerContainer{
         justify-content: center;
         text-align: center;
