--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -232,7 +232,9 @@
     }
     .mainContent{
         width: 100%;
-        padding: 50px 20px 90px 20px;
+        padding: 50px 20px 70px 20px;
+        gap: 30px;
+        justify-content: flex-start;
     }
     .mainContent p{
         font-size: 16px;
@@ -250,6 +252,9 @@
         height: 2px;
         width: var(--after-width);
     }
+    .mainContent .overviewTextBox{
+        flex: 0;
+    }
     .mainContent .overviewIntro{
         font-size: 20px;
         margin-top: 10px;
@@ -257,7 +262,6 @@
     .btnBox{
         flex-direction: column;
         gap: 20px;
-        margin-top: 60px;
     }
     .overviewVisual{
         display: none;
