--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -220,6 +220,7 @@
     .contentBox{
         padding: 0;
         overflow: visible;
+        height: calc(100vh - 70px);
     }
     .content{
         padding: 0;
@@ -232,7 +233,7 @@
     }
     .mainContent{
         width: 100%;
-        padding: 50px 20px 70px 20px;
+        padding: 50px 20px 0 20px;
         gap: 30px;
         justify-content: flex-start;
     }
