--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     width: 100%;
     height: 100vh;
+    transition: .5s ease;
 }
 .contentBox{
     padding: 80px 80px 0;
@@ -21,9 +22,12 @@
     letter-spacing: -2px;
     color: #222;
     margin-bottom: 10px;
+    transition: .5s ease;
 }
 .sectionTitle p{
     opacity: 0;
+    color: #222;
+    transition: .5s ease;
 }
 .sectionTitleTextChar{
     opacity: 0;
@@ -47,7 +51,7 @@
   width: 6px; 
 }
 .boardContainer::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.4);
   border-radius: 4px;
 }
 .boardContainer::-webkit-scrollbar-track {
@@ -97,6 +101,20 @@
 .projectCard:hover .hoverBox{
     transform: translateY(0) translateX(-50%);
     opacity: 1;
+}
+
+/* 다크 모드 */
+:global(body.darkMode) .wrapper{
+    background: #222;
+}
+:global(body.darkMode) .title, :global(body.darkMode) .sectionTitle p{
+    color: #eee;
+}
+:global(body.darkMode) .sectionTitle::after{
+    background: #eee;
+}
+:global(body.darkMode) .boardContainer::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.8);
 }
 
 @media screen and (min-width: 730px) and (max-width: 1350px){
