다크모드 완성, 일부 버그 수정

--- a/src/components/layout/footer/footer.module.css
+++ b/src/components/layout/footer/footer.module.css
@@ -21,6 +21,7 @@
 /*다크모드*/
 :global(body.darkMode) .footerContainer{
     color: #eee;
+    border-top: 1px solid #eee;
 }
 :global(body.darkMode) .footerContainer a{
     color: #eee;
