--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -290,7 +290,7 @@
         background: #222;
         height: 2px;
         width: var(--after-width);
-        transition: .5s ease;
+        transition: background-color 0.5s ease;
     }
     :global(body.darkMode) .mainContent .sectionTitle::after{
         background: #eee;
