--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -40,6 +40,7 @@
     height: 2px;
     background: #222;
     width: var(--after-width); 
+    transition: background-color 0.5s ease;
 }
 .boardContainer{
     width: 100%;
