--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -49,6 +49,7 @@
     display: block;
     position: relative;
     transition: .5s;
+    opacity: 0;
 }
 .back::after{
     content: '';
@@ -63,8 +64,8 @@
     background-size: 50px 50px;
     width: 50px;
     height: 50px;
-    filter: brightness(0);
-    transition: .3s;
+    filter: invert(0);
+    transition: filter 0.5s ease;
     cursor: pointer;
 }
 .back:hover{
@@ -117,7 +118,7 @@
     width: 30px;
     height: 30px;
     opacity: 0;
-    transition: .5s ease;
+    transition: filter 0.5s ease;
 }
 .description .num01{
     background: url("/source/img/icons/list01.png") no-repeat center;
@@ -258,7 +259,9 @@
     background-color: #eee;
     color: #222;
 }
-
+:global(body.darkMode) .back::after{
+    filter: invert(9);
+}
 @media screen and (min-width:731px) and (max-width:1350px) {
     .container{
         padding: 0 80px;
