--- a/src/components/pages/project/project.module.css
+++ b/src/components/pages/project/project.module.css
@@ -1,13 +1,13 @@
 .wrapper{
     width: 100%;
-    height: auto;
+    height: 100vh;
     transition: .5s ease;
 }
 .contentBox{
     padding: 80px 80px 0;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
 }
@@ -45,7 +45,7 @@
 .boardContainer{
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow-x: visible;
 }
 .boardContainer::-webkit-scrollbar {
   width: 6px; 
@@ -59,13 +59,13 @@
 }
 .projectBoard{
     width: 100%;
-    height: calc(100vh - 80px);
-    padding: 60px 40px;
+    height: calc(100vh - 280px);
+    padding: 40px;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
 }
 .projectBoard .filterBox{
-    width: 20%;
+    width: 220px;
     background-color: #222;
     display: flex;
     align-items: center;
@@ -75,12 +75,12 @@
     border-radius: 60px;
 }
 .filterBox .filterCondition{
-    padding: 8px 20px;
+    padding: 4px 10px;
     border-radius: 20px;
     border: none;
     background-color: #222;
     color: #fff;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     letter-spacing: normal;
     font-family: 'Aldrich';
@@ -94,40 +94,179 @@
     background-color: #fff;
     color: #222;
 }
-.projectCardList {
-    display: flex;
-    gap: 20px;
+.boardContainer .projectBoard .projectCardList {
     margin-top: 40px;
+    overflow: visible;
+    height: 100%;
 }
 .projectCard{
-    min-width: 400px;
-    height: 500px;
-    border: 1px solid #222;
-    overflow: hidden;
+    overflow: visible;
     position: relative;
     border-radius: 10px;
-    border: 1px solid #555;
+    opacity: 1;
+    perspective: 630px;
+    width: 400px !important;
+    height: 85% !important;
+    border-radius: 10px;
+    opacity: 0;
+}
+.cardInner {
+    transform-style: preserve-3d;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.7s;
+    position: relative;
+}
+.cardInner.flipped {
+    transform: rotateY(180deg);
 }
 
-.hoverBox{
-    width: 80%;
-    height: 60px;
-    background-color: #222;
-    border: #fff 1px solid;
-    border-radius: 10px;
-    transform: translateY(200%) translateX(-50%);
-    color: #fff;
-    text-align: center;
-    line-height: 60px;
-    opacity: 0;
-    transition: 0.3s;
+.frontSide,
+.backSide {
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    overflow: hidden;
     position: absolute;
-    bottom: 40px;
-    left: 50%;
+    top: 0;
+    left: 0;
 }
-.projectCard:hover .hoverBox{
-    transform: translateY(0) translateX(-50%);
+.frontSide {
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 1100px 700px ;
+    box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+    transition: all 0.4s;
+}
+.frontSide:hover {
+  box-shadow: 0 0 18px 3px rgba(0, 0, 0, 0.5);
+}
+.frontSide video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+}
+.frontSide video.active{
     opacity: 1;
+}
+.frontSide .titleBox{
+    position: absolute;
+    background-color: #fff;
+    bottom: 0;
+    width: 100%;
+    height: 23%;
+    border-top: 1px solid #555;
+    padding: 10px 30px;
+}
+.frontSide .titleBox p{
+    color: #222;
+    font-size: 24px;
+    font-weight: 800;
+    font-family: 'Aldrich';
+}
+.frontSide .titleBox .cardNotice{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: .3s ease;
+    color: #222;
+    font-size: 18px;
+}
+.frontSide:hover .titleBox .cardNotice{
+    opacity: 1;
+    animation: shaking 0.3s infinite;
+
+}
+@keyframes shaking {
+    0%, 100% {
+        transform: translateX(-50%) translateY(0);
+    }
+    50% {
+        transform: translateX(-50%) translateY(-10px);
+    }
+}
+.backSide {
+    transform: rotateY(180deg);
+    background: #fafafa;
+    padding: 20px;
+    box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
+}
+.backSide .titleBox p:first-child{
+    color: #222;
+    font-size: 36px;
+    font-weight: 800;
+    font-family: 'Aldrich';
+}
+.backSide .titleBox p{
+    font-size: 16px;
+    font-weight: 400;
+    font-family:'Noto Sans KR';
+    margin-bottom: 20px;
+}
+.backSide .languageTags{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+.languageTags .tag{
+    padding: 4px 8px;
+    background-color: #444;
+    color: #fff;
+    transition: background-color .3s ease;
+    user-select: none;
+    margin-bottom: 30px;
+}
+.languageTags .tag:hover{
+    background-color: #222;
+}
+.backSide .linkBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.backSide .linkBox a{
+    display: inline-block;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border: #222 1px solid;
+    border-radius: 5px;
+    transition: background-color .5s ease, color .5s ease, border .5s ease;
+}
+.backSide .linkBox a:hover{
+    background-color: #222;
+    color: #fff;
+}
+.backSide .returnFrontSide{
+    text-align: end;
+    height: 30px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+.backSide button{
+    display: inline-block;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+    background: transparent;
+    border: none;
+}
+.backSide button .ico{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: url(/source/img/icons/ico_turn.png) no-repeat center/cover;
 }
 
 /* 다크 모드 */
