--- a/src/components/pages/about/about.module.css
+++ b/src/components/pages/about/about.module.css
@@ -43,6 +43,7 @@
 }
 .content{
     overflow: auto;
+    padding: 40px;
 }
 .content::-webkit-scrollbar {
   width: 6px; 
@@ -76,7 +77,7 @@
     margin-top: 80px;
 }
 .listBlock:first-child{
-    margin-top: 20px;
+    margin-top: 0;
 }
 .subtitle .num01{
     background: url("/source/img/icons/list01.png") no-repeat center/30px 30px;
@@ -101,45 +102,82 @@
 .kimsangho p:first-of-type{
     margin-top: 20px;
 }
-.education ul, .certificate ul, .skills ul{
+.education ul, .certificate ul{
     margin-left: 50px;
     margin-top: 20px;
 }
 .education li, .certificate li, .skills li{
     opacity: 0;
 }
+.skillListContainer{
+    margin-top: 20px;
+}
+.skills .skillTab{
+    display: flex;
+    gap: 80px;
+    justify-content: center;
+}
 .skills .skillListTitle{
-    margin-left: 50px;
-    margin-top: 50px;
+    width: fit-content;
+    text-align: center;
     font-size: 20px;
     font-family:'Aldrich';
     font-weight: 500;
     opacity: 0;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    height: 40px;
+    line-height: 40px;
+    position: relative;
+    cursor: pointer;
+    transition: text-shadow .5s ease;
 }
 .skills .skillListTitle::before{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    height: 2px;
+    background-color: #222;
+    width: 0;
     content: '';
-    display: inline-block;
-    width: 5px;
-    height: 5px;
-    background: #222;
+    display: block;
+    transition: width .5s ease, background-color .5s ease;
 }
-.skills .skillListTitle:first-of-type{
-    margin-top: 20px;
+.skills .skillListTitle:hover{
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
-.skills ul{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+.skills .skillListTitle:hover::before{
+    width: 110%;
 }
-.skills ul li{
+.skills .skillListTitle.selected{
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+}
+.skills .skillListTitle.selected::before{
+    width: 110%;
+}
+.skills .skillList{
+    margin: 0 auto;
+    margin-top: 50px;
+    min-height: 350px;
+    border-radius: 15px;
+    padding: 60px;
+    width: 80%;
+    background-color: #f5f5f5;
+    transition: background-color .5s ease;
+    opacity: 0;
+}
+.skillList ul{
+    display: grid;
+    grid-template-columns: repeat(120px, 1fr);
+    text-align: center;
+    row-gap: 30px;
+}
+.skillList .skill{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    flex-basis: 10%;
+    flex-basis: 9%;
+    font-weight: 500;
 }
 .skillIcon{
     display: inline-block;
@@ -151,7 +189,7 @@
     margin-bottom: 100px
 }
 .contact .contactBox{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     border-color: #222;
     border-width: 0px;
@@ -217,6 +255,18 @@
 :global(body.darkMode) .content::-webkit-scrollbar-thumb{
     background: rgba(255, 255, 255, 0.8);
 }
+:global(body.darkMode) .skills .skillListTitle:hover{
+    text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
+}
+:global(body.darkMode) .skills .skillListTitle.selected{
+    text-shadow: 1px 1px 2px rgba(255,255,255,0.8);
+}
+:global(body.darkMode) .skills .skillListTitle::before{
+    background-color: #fff;
+}
+:global(body.darkMode) .skills .skillList{
+    background-color: #777;
+}
 :global(body.darkMode) .contactBox{
     border-color: #eee;
 }
@@ -232,9 +282,6 @@
 @media screen and (min-width: 730px) and (max-width: 1350px){
     .title{
         font-size: 80px;
-    }
-    .skills ul{
-        gap: 30px;
     }
 }
 
