--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -5,43 +5,42 @@
     position: relative;
     transition: .5s ease;
 }
+.wrapper::before{
+    position: absolute;
+    background: linear-gradient(to right, #fff 50%, transparent);
+    width: 100%;
+    height: 100%;
+    content: '';
+    display: block;
+    pointer-events: none;
+    opacity: 1;
+    inset: 0;
+    transition: opacity .3s ease;
+}
+.wrapper::after{
+    position: absolute;
+    background: linear-gradient(to right, #222 50%, transparent);
+    width: 100%;
+    height: 100%;
+    content: '';
+    display: block;
+    pointer-events: none;
+    opacity: 0;
+    inset: 0;
+    transition: opacity .3s ease;
+}
 .container{
     width: 100%;
     padding: 0 150px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
-.backImage{
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    z-index: -1;
-    pointer-events: none;
-}
-.lightBackground{
-    background: linear-gradient(to right, #fff 50%, transparent);
-    position: absolute;
-    width: 100%;
-    z-index: 0;
-    inset: 0;
-    pointer-events: none;
-    transition: .5s ease;
-}
-.darkBackground{
-    background: linear-gradient(to right, #222 50%, transparent);
-    position: absolute;
-    width: 100%;
-    z-index: 0;
-    inset: 0;
-    pointer-events: none;
-    transition: .5s ease;
-}
-
 /*상단*/
 .upperArea{
     height: 100px;
     display: flex;
     align-items: center;
+    z-index: 0;
 }
 .back{
     width: 0;
@@ -171,20 +170,49 @@
     width: 5px;
     height: 5px;
     background: #222;
+    transition: background-color .5s ease;
 }
 .skill .subtitle:first-child{
     margin-top: 0;
 }
+.skill .skillListContainer{
+    transition: background-color .5s ease;
+    padding: 30px;
+    border-radius: 15px;
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+}
+.skill .skillListContainer::before{
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(to right, #f5f5f5 40%, transparent);
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+    opacity: 1;
+}
+.skill .skillListContainer::after{
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(to right, #777 40%, transparent);
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+    opacity: 0;
+    z-index: -1;
+}
 .skill ul{
     margin-left: 0;
+    gap: 30px;
 }
 .skill li{
     font-weight: 600;
-    flex-basis: 20%;
+    flex-basis: 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
     opacity: 0;
 }
 .skillIcon{
@@ -240,8 +268,23 @@
 :global(body.darkMode) .wrapper{
     color: #eee;
 }
+:global(body.darkMode) .wrapper::before{
+    opacity: 0;
+}
+:global(body.darkMode) .wrapper::after{
+    opacity: 1;
+}
 :global(body.darkMode) .numIcon{
     filter: invert(9);
+}
+:global(body.darkMode) .skill .subtitle::before{
+    background-color: #fff;
+}
+:global(body.darkMode) .skill .skillListContainer::before{
+    opacity: 0;
+}
+:global(body.darkMode) .skill .skillListContainer::after{
+    opacity: 1;
 }
 :global(body.darkMode) .link a{
     color: #ccc;
@@ -270,7 +313,13 @@
 
 @media screen and (max-width:730px) {
     .wrapper{
-        background: white !important;
+        background: none !important;
+    }
+    .wrapper::before{
+        background: #fff;
+    }
+    .wrapper::after{
+        background: #222;
     }
     .backImage{
         display: none;
@@ -281,8 +330,25 @@
     .darkBackground{
         background: #222;
     }
+    .skill .skillListContainer{
+        padding: 20px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+    .skill .skillListContainer::before{
+        background: #f5f5f5;
+    }
+    .skill .skillListContainer::after{
+        background: #777;
+    }
+    .skill li{
+        flex-basis: 20%;
+    }
+    .skill .skillIcon{
+        width: 40px;
+        height: 40px;
+    }
     .container{
-        padding: 0 2%;
+        padding: 0 3%;
     }
     .contentBox{
         width: 100%;
